Fix page layout and three-day forecast spacing

--- a/src/style.css
+++ b/src/style.css
@@ -80,52 +80,32 @@ button {
  */
 
 .weather-container {
-    display: grid;
-    grid-template-rows: repeat(2, auto) 2fr 1fr;
-    grid-template-columns: repeat(2, 3fr) 2fr;
-    row-gap: 1rem;
-    column-gap: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
 
     width: 80vw;
     height: 100vh;
 
     padding: 1rem;
-    
-    /* border: 1px solid black; */
 
     font-size: 20px;
 }
 
-/* Row 1 */
-.location-info-container {
-    grid-area: 1 / 1 / 2 / 2;
+.row-1 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1rem;
 }
 
-.current-weather-container {
-    grid-area: 1 / 2 / 2 / 3;
-} 
-
-.gif-container {
-    grid-area: 1 / 3 / 2 / 4;
+.row-3 {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    column-gap: 1rem;
 }
 
-/* Row 2 */
-.three-day-forecast-container {
-    grid-area: 2 / 1 / 3 / -1;
-}
+.row-3 {
 
-/* Row 3 */
-.current-details-container {
-    grid-area: 3 / 1 / 4 / 2;
-}
-
-.hourly-forecast-info-container {
-    grid-area: 3 / 2 / 4 / -1;
-}
-
-/* Row 4 */
-form {
-    grid-area: 4 / 1 / -1 / -1;
 }
 
 .subsection-header {
@@ -242,10 +222,11 @@ form {
 }
 
 .three-day-forecast-card {
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    align-items: center;
 
-    padding: 0 1rem;
+    padding: 0.2rem 1rem;
 
     border-radius: 10px;
     background-color: rgba(0, 0, 0, 0.30);
@@ -257,9 +238,10 @@ form {
 }
 
 .forecast-card-details {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-rows: auto 1fr;
+    justify-items: center;
+    gap: 0.5rem;
 }
 
 /*
